testsuite/tests/parser/should_fail/T21843d.hs
module UnicodeSmartQuotes where

badChar = 'x’

